# wxauto-mcp

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  init-git.sh  pyproject.toml  release.bat  release.sh
.github/workflows/: release.yml
core/: __init__.py  config.py  exceptions.py  listener.py  models.py
src/wxauto_mcp/wxauto_mcp/: __init__.py  api_contacts.py  api_files.py  api_friends.py  api_listen.py  api_messages.py  api_sessions.py  api_system.py  rpc.py  server.py  singleton.py  utils.py
src/wxauto_mcp/wxauto_mcp/core/: config.py  listener.py  models.py  wechat_wrapper.py
tests/: __init__.py
