[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wxauto-mcp"
version = "1.0.2"
description = "wxauto automation MCP Server for AI development tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "wxauto MCP Team" }
]
keywords = ["wxauto", "mcp", "automation", "ai", "wxautox4", "wechat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "wxautox4>=0.2.0; sys_platform == 'win32'",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "tomli-w>=1.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[project.scripts]
wxauto-mcp = "wxauto_mcp.server:main_sync"
wxauto-mcp-http = "wxauto_mcp.server:main_http"

[project.urls]
Homepage = "https://github.com/wxauto-mcp/wxauto-mcp"
Documentation = "https://github.com/wxauto-mcp/wxauto-mcp#readme"
Repository = "https://github.com/wxauto-mcp/wxauto-mcp.git"
Issues = "https://github.com/wxauto-mcp/wxauto-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wxauto_mcp/wxauto_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
